landing_page: Fix overflowing text on firefox in plans container.
This usually happens due to different defaults set by
different browsers for certain properties.

--- a/static/styles/portico/landing_page.css
+++ b/static/styles/portico/landing_page.css
@@ -2836,6 +2836,7 @@ nav {
     color: hsl(0, 0%, 53%);
 
     text-align: left;
+    white-space: nowrap;
 }
 
 .pricing-model .pricing-container .bottom .button {
